--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,9 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'io.github.meetsl:SCardView:1.2'
+
+    //for gif
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.23'
 }
