--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,16 @@
     package="com.emon.raihan.messmanagement">
 
     <application
+        android:name=".util.GlobalVariable"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MessManagement">
+        <activity
+            android:name=".view.welcome.Welcome"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
