--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,13 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
 
+    // Circle image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // Image Load
+    implementation "com.github.bumptech.glide:glide:4.9.0"
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+
 }
